...
            } else {
              ScaffoldMessenger.of(context).showSnackBar(
                SnackBar(content: Text('Content cannot be empty.')),
              );
            }
          },
          child: Text('Submit Post'),
          style: ButtonStyle(backgroundColor: MaterialStateProperty.all(Theme.of(context).colorScheme.inversePrimary)),
        ),
      ],
    );
  }
}
...
